--- a/estilos.css
+++ b/estilos.css
@@ -157,3 +157,41 @@ footer a:hover {
   text-shadow: 7px 7px 3px red;
 }
 
+#productos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: orange;
+ 
+}
+
+.producto {
+  width: 300px;
+  border: 1px solid whitesmoke;
+  margin: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  background-color: black;
+  color: orange;
+}
+
+.producto img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  margin: auto;
+  padding: 5px;
+  border: 1px solid whitesmoke;
+  margin-top: 7px;
+}
+
+.producto h3 {
+  margin: 10px;
+}
+
+.producto p {
+  margin: 5px;
+  font-weight: bold;
+}
