--- a/estilos.css
+++ b/estilos.css
@@ -75,10 +75,10 @@ animation-duration: 2s;
   color: orange;
   background-color: black;
   margin: 1%;
+  width: 70px;
+  height: 30px;
 }
-.butbanner:hover {
-  width: 100px;
-}
+
 .titulo {
   display: flex;
   justify-content: center;
@@ -195,3 +195,64 @@ footer a:hover {
   margin: 5px;
   font-weight: bold;
 }
+
+.sectionn {
+ 
+  height: auto;
+  border: 1px solid black;
+  background-color: orange;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+}
+.sectionn img {
+  object-fit: cover;
+  background-color: black;
+  width: 200px;
+  height: 200px;
+  border-radius: 3%;
+  border: 2px solid black;
+  box-shadow: 10px 5px 5px black;
+  filter: grayscale(0.5);
+  padding: 30px;
+  align-self: center;
+  animation-name: mover;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  margin: 20px;
+}
+
+@keyframes mover {
+  from {transform: translateX(0)}
+  to {transform: translateX(300px)}
+}
+
+
+.sectionn p {
+
+  text-align: center;
+  font-size: 18px;
+  padding: 20px;
+  font-weight: 900;
+  color: black;
+  box-shadow: 10px 5px 5px black;
+  background-color: silver;
+  opacity: 0.8;
+  animation-name: aparicion;
+  animation-duration: 6s;
+}
+
+.sectionn  h2 {
+  border: 2px solid black;
+  text-align: center;
+  font-size: 16px;
+  padding: 20px;
+  font-weight: bolder;
+color: whitesmoke;
+  box-shadow: 10px 5px 5px black;
+  background-color: black;
+  opacity: 0.85;
+}
+
