--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,8 +33,10 @@
   }
 }
 
+
 #body {
   border: 2px solid black;
+  font-family: 'Roboto', sans-serif;
 }
 .section1 {
   background-color: black;
@@ -137,6 +139,8 @@
   -webkit-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
 }
+
+
 .foot {
   background-color: black;
   border: 7px double orange;
@@ -166,66 +170,6 @@ footer a:hover {
 
 
 
-.sectionn {
-  height: auto;
-  border: 1px solid black;
-  background-color: orange;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 20px;
-}
-.sectionn img {
-  object-fit: cover;
-  background-color: black;
-  width: 200px;
-  height: 200px;
-  border-radius: 3%;
-  border: 2px solid black;
-  box-shadow: 10px 5px 5px black;
-  filter: grayscale(0.5);
-  padding: 30px;
-  align-self: center;
-  animation-name: mover;
-  animation-duration: 10s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  margin: 20px;
-}
-
-@keyframes mover {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(300px);
-  }
-}
-
-.sectionn p {
-  text-align: center;
-  font-size: 18px;
-  padding: 20px;
-  font-weight: 900;
-  color: black;
-  box-shadow: 10px 5px 5px black;
-  background-color: silver;
-  opacity: 0.8;
-  animation-name: aparicion;
-  animation-duration: 6s;
-}
-
-.sectionn h2 {
-  border: 2px solid black;
-  text-align: center;
-  font-size:25px;
-  padding: 20px;
-  font-weight: bolder;
-  color: whitesmoke;
-  box-shadow: 10px 5px 5px black;
-  background-color: black;
-  opacity: 0.85;
-}
 body {
   font-family: Arial, sans-serif;
   background-color: #f1f1f1;
