--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,16 +33,14 @@
   }
 }
 
-
 #body {
   border: 2px solid orange;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
 }
 .section1 {
   background-color: black;
-  
 }
 .titulo {
   color: orange;
@@ -105,11 +103,9 @@
   display: grid;
   grid-template-columns: 50% 50%;
   height: 60vh;
-  
 }
 .sect0 {
   background-color: black;
-  
 }
 .sect1 {
   background-color: black;
@@ -150,7 +146,6 @@
   transform-origin: 50% 50%;
 }
 
-
 .foot {
   background-color: black;
   border: 7px double orange;
@@ -178,15 +173,12 @@ footer a:hover {
   text-shadow: 7px 7px 3px red;
 }
 
-
-
 body {
   font-family: Arial, sans-serif;
   background-color: #f1f1f1;
 }
 
 @media (max-width: 768px) {
-
   .logo {
     width: 100px;
     height: 100px;
@@ -245,7 +237,6 @@ body {
 }
 
 @media (max-width: 480px) {
-  
   .logo {
     width: 80px;
     height: 80px;
